# WavUp

./: Cargo.toml  README.md
audio/: example_vorbris.oga
src/: error.rs  lib.rs  main.rs
