[package]
name = "wavup"
version = "0.1.4"
edition = "2021"
description = "A library for converting audio files to WAV format"
license = "Apache-2.0"
repository = "https://github.com/LlamaEdge/wavup"
keywords = ["audio"]
categories = ["multimedia::audio", "wasm"]
readme = "README.md"
documentation = "https://docs.rs/wavup/"

[lib]
name = "wavup"
path = "src/lib.rs"

[[bin]]
name = "wavup"
path = "src/main.rs"

[dependencies]
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.12"
hound = "3.5"
clap = { version = "4.4", features = ["derive"] }
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"], optional = true }

[features]
default = ["logging"]
logging = ["log"]
